Define INADDR_LOOPBACK if not defined.

* src/assuan-socket.c (INADDR_LOOPBACK): Define.

--

INADDR_LOOPBACK is not defined in some systems.  When defined, its
byte-order is not clearly defined in any specifications.  So, best
portable way is not to use the macro INADDR_LOOPBACK at all but use
0x7f000001 directly.

Nevertheless, for systems which use libassuan, it's host byte-order.
So, adding the definition works.

GnuPG-bug-id: 2447
Suggested-by: Peter Dyballa
Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>